main functionality complete

--- a/style.css
+++ b/style.css
@@ -1,3 +1,68 @@
 body {
     margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Inter', sans-serif;
 }
+
+main {
+    height: 550px;
+    width: 550px;
+    background-color: #1F2937;
+}
+
+#form-container {
+    margin: 100px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content:right;
+}
+
+#title-container {
+    width: 300px;
+    margin: 20px 0;
+}
+
+h1 {
+    font-family: 'Karla', sans-serif;
+    margin: 0;
+}
+
+h4 {
+    font-weight: 400;
+}
+
+span {
+    color: #4ADF86;
+}
+
+button {
+    border: none;
+    background-color: #10B981;
+    color: white;
+    padding: 9px 17px;
+    border-radius: 4px;
+    font-weight: 500;
+}
+
+#password-container {
+    margin: 20px 0 20px 0;
+    padding: 20px 0;
+    display: flex;
+    gap: 20px;
+    border-top: #2F3E53 solid 1px;
+}
+
+.password {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 40px;
+    background-color: #273549;
+    color: #4ADF86; 
+}
+
