--- a/style.css
+++ b/style.css
@@ -6,19 +6,23 @@ body {
     align-items: center;
     color: white;
     font-family: 'Inter', sans-serif;
+    background-color: #273549;
 }
 
 main {
     height: 550px;
     width: 550px;
     background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 5px black;
+
 }
 
 #form-container {
-    margin: 100px 50px;
     display: flex;
     flex-direction: column;
-    justify-content:right;
 }
 
 #title-container {
@@ -33,6 +37,7 @@ h1 {
 
 h4 {
     font-weight: 400;
+    margin: 10px 0;
 }
 
 span {
